--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
                 <!--android:name="com.amap.api.v2.apikey"-->
                 <!--android:value="d4b941ca9ce54236a76f5f495590f935"/>-->
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <!--&lt;!&ndash;允许程序打开网络套接字&ndash;&gt;-->
     <!--<uses-permission android:name="android.permission.INTERNET" />-->
