--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:27.0.0'
+    }
 }
 
 dependencies {
@@ -24,6 +27,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.jsoup:jsoup:1.11.3'
+    androidTestImplementation 'com.android.support:support-annotations:27.1.1'
 //    implementation 'com.amap.api:location:latest.integration'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
